2004-12-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/mf-to-table.py (write_ps_encoding): write real
	names in .enc

	* lily/*.cc: use '.' iso. '-' for separating glyph name elements.

2004-12-09  Graham Percival  <gperlist@shaw.ca>

        * Documentation/user/changing-defaults.itely: add info about
        make-dynamic-script

        * Documentation/user/notation.itely: add link in dynamics to
        section about make-dynamic-script.

2004-12-09  Christian hitz  <chhitz@gmx.net>

	* lily/lily-guile.cc: change MACOS_X to __APPLE__

2004-12-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/mf-to-table.py (parse_logfile): use . for
	concatting name and group.
	(parse_logfile): use M for Minus (negative.)

	* lily/include/type-swallow-translator.hh
	(DECLARE_EVENT_SWALLOWER): ENTER_DESCRIPTION -> ADD_TRANSLATOR

	* lily/*.cc: cosmetics around = sign.

	* lily/paper-column.cc (Paper_column): copy rank_. This fixes
	lyric spacing on the penultimate column.

2004-12-05  Christian Hitz  <chhitz@gmx.net>

	* configure.in:
	* lily/accidental-placement.cc:
	* lily/bar-line.cc:
	* lily/beam-concave.cc:
	* lily/beam-quanting.cc:
	* lily/beam.cc:
	* lily/bezier-bow.cc:
	* lily/bezier.cc:
	* lily/break-align-interface.cc:
	* lily/custos.cc:
	* lily/dimension-cache.cc:
	* lily/dot-column.cc:
	* lily/font-metric.cc:
	* lily/font-select.cc:
	* lily/gourlay-breaking.cc:
	* lily/grob-property.cc:
	* lily/grob.cc:
	* lily/lily-guile.cc:
	* lily/line-spanner.cc:
	* lily/lookup.cc:
	* lily/lyric-extender.cc:
	* lily/lyric-hyphen.cc:
	* lily/mensural-ligature.cc:
	* lily/midi-def.cc:
	* lily/misc.cc:
	* lily/note-collision.cc:
	* lily/note-column.cc:
	* lily/note-head.cc:
	* lily/paper-outputter.cc:
	* lily/percent-repeat-item.cc:
	* lily/rest-collision.cc:
	* lily/side-position-interface.cc:
	* lily/simple-spacer.cc:
	* lily/slur-configuration.cc:
	* lily/slur-scoring.cc:
	* lily/slur.cc:
	* lily/spaceable-grob.cc:
	* lily/spacing-spanner.cc:
	* lily/spanner.cc: